Add Image Upload Functionality

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "preinstall": "npx npm-force-resolutions",
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --output-path docs --base-href /alumni-dashboard/",
+    "build-pages": "ng build --output-path docs --base-href /alumni-dashboard/",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
