--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build-pages": "ng build --output-path docs --base-href /alumni-dashboard/",
-    "build": "ng build",
+    "build": "ng build --base-href /dist/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
