--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build-pages": "ng build --output-path docs --base-href /alumni-dashboard/",
-    "build": "ng build",
+    "build-dist": "ng build",
+    "build-all":  "npm run build-pages && npm run build-dist",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
