--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "ng serve",
     "build-pages": "ng build --output-path docs --base-href /alumni-dashboard/",
     "build-dist": "ng build",
-    "build-all":  "npm run build-pages && npm run build-dist",
+    "build-all": "npm run build-pages && npm run build-dist",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -16,17 +16,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.1.2",
-    "@angular/cdk": "12.1.2",
-    "@angular/common": "12.1.2",
-    "@angular/compiler": "12.1.2",
-    "@angular/core": "12.1.2",
-    "@angular/forms": "12.1.2",
-    "@angular/material": "12.1.2",
-    "@angular/platform-browser": "12.1.2",
-    "@angular/platform-browser-dynamic": "12.1.2",
-    "@angular/platform-server": "12.1.2",
-    "@angular/router": "12.1.2",
+    "@angular/animations": "12.2.16",
+    "@angular/cdk": "12.2.13",
+    "@angular/common": "12.2.16",
+    "@angular/compiler": "12.2.16",
+    "@angular/core": "12.2.16",
+    "@angular/forms": "12.2.16",
+    "@angular/material": "12.2.13",
+    "@angular/platform-browser": "12.2.16",
+    "@angular/platform-browser-dynamic": "12.2.16",
+    "@angular/platform-server": "12.2.16",
+    "@angular/router": "12.2.16",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@popperjs/core": "^2.11.5",
     "ajv": "8.6.1",
     "arrive": "2.4.1",
     "bootstrap": "4.5.2",
@@ -50,10 +52,11 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.1.2",
-    "@angular/cli": "12.1.2",
-    "@angular/compiler-cli": "12.1.2",
-    "@angular/language-service": "12.1.2",
+    "@angular-devkit/build-angular": "12.2.17",
+    "@angular/cli": "12.2.17",
+    "@angular/compiler-cli": "12.2.16",
+    "@angular/language-service": "12.2.16",
+    "@angular/localize": "^12.2.16",
     "@types/bootstrap": "4.5.0",
     "@types/chartist": "0.11.1",
     "@types/googlemaps": "3.43.3",
